X-frame-header-validate

--- a/OnlineShop_8_11_2020/OnlineShop/OnlineShop.csproj
+++ b/OnlineShop_8_11_2020/OnlineShop/OnlineShop.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="filter\XframeOptionsAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -3499,7 +3500,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>50870</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44394/</IISUrl>
+          <IISUrl>http://localhost:8080/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
