--- a/OnlineShop_8_11_2020/OnlineShop/bin/OnlineShop.dll.config
+++ b/OnlineShop_8_11_2020/OnlineShop/bin/OnlineShop.dll.config
@@ -21,7 +21,7 @@
     <section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
   </configSections>
   <connectionStrings>
-    <add name="OnlineShopDbContext" connectionString="data source=DESKTOP-KM7R0VL;initial catalog=OnlineShop;user id=sa;password=@sa123123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="OnlineShopDbContext" connectionString="data source='DESKTOP-3LI7BJM\MSSQLSERVER01';initial catalog=OnlineShop;MultipleActiveResultSets=True;App=EntityFramework; Integrated Security=True" providerName="System.Data.SqlClient"  />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -60,6 +60,8 @@
       </outputCacheSettings>
     </caching>
     
+	 
+	  
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" executionTimeout="3600" />
@@ -82,6 +84,11 @@
     </pages>
   </system.web>
   <system.webServer>
+	<httpProtocol>
+    <customHeaders>
+      <add name="X-Frame-Options" value="SAMEORIGIN" />
+    </customHeaders>
+  </httpProtocol>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
