cookie httpOnly + samesite flag
fix loi cua 2 cookie + cfrs lien he

--- a/OnlineShop_8_11_2020/OnlineShop/Web.config
+++ b/OnlineShop_8_11_2020/OnlineShop/Web.config
@@ -48,8 +48,11 @@
     <add key="HomeKeywords" value="đối thủ cạnh tranh đủ thứ của f@hasa..." />
     <add key="HomeDescription" value="Cửa hàng sách số 1 vũ trụ uy tín cung cấp hàng hóa cao cấp giá sập sàng" />
   </appSettings>
+	
   <system.web>
-
+	 
+	<httpCookies httpOnlyCookies="true" />
+	  
     <caching>
       <outputCacheSettings>
         <outputCacheProfiles>
@@ -58,15 +61,12 @@
           <add name="Cache1DayForProduct" duration="86400" varyByParam="id" />
         </outputCacheProfiles>
       </outputCacheSettings>
-    </caching>
-    
-	 
+    </caching>	 
 	  
-    <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" executionTimeout="3600" />
     <!-- Traditional API: Register a custom SessionIDManager for BotDetect requests -->
-    <sessionState timeout="20" mode="InProc" cookieless="AutoDetect" sessionIDManagerType="BotDetect.Web.CustomSessionIdManager, BotDetect">
+    <sessionState  timeout="20" mode="InProc" cookieless="AutoDetect" sessionIDManagerType="BotDetect.Web.CustomSessionIdManager, BotDetect" >
     </sessionState>
     <customErrors mode="Off">
     </customErrors>
@@ -82,8 +82,25 @@
         <add assembly="BotDetect" namespace="BotDetect.Web.UI" tagPrefix="BotDetect" />
       </controls>
     </pages>
+
   </system.web>
   <system.webServer>
+	  <rewrite>
+		  <outboundRules>
+			  <rule name="Add SameSite" preCondition="No SameSite">
+				  <match serverVariable="RESPONSE_Set_Cookie" pattern=".*" negate="false" />
+				  <action type="Rewrite" value="{R:0}; SameSite=strict" />
+				  <conditions>
+				  </conditions>
+			  </rule>
+			  <preConditions>
+				  <preCondition name="No SameSite">
+					  <add input="{RESPONSE_Set_Cookie}" pattern="." />
+					  <add input="{RESPONSE_Set_Cookie}" pattern="; SameSite=strict" negate="true" />
+				  </preCondition>
+			  </preConditions>
+		  </outboundRules>
+	  </rewrite>
 	<httpProtocol>
     <customHeaders>
       <add name="X-Frame-Options" value="SAMEORIGIN" />
