--- a/OnlineShop_8_11_2020/OnlineShop/Web.config
+++ b/OnlineShop_8_11_2020/OnlineShop/Web.config
@@ -21,8 +21,8 @@
 		<section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
 	</configSections>
 	<connectionStrings>
-		<add name="OnlineShopDbContext" connectionString="data source='DESKTOP-3LI7BJM\MSSQLSERVER01';initial catalog=OnlineShop;MultipleActiveResultSets=True;App=EntityFramework; Integrated Security=True" providerName="System.Data.SqlClient"  />
-	</connectionStrings>
+    <add name="OnlineShopDbContext" connectionString="data source='DESKTOP-12J6D6C';initial catalog=OnlineShop;MultipleActiveResultSets=True;App=EntityFramework; Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -51,7 +51,7 @@
 
 	<system.web>
 
-		<httpCookies httpOnlyCookies="true" />
+		<httpCookies requireSSL="true" httpOnlyCookies="true" />
 
 		<caching>
 			<outputCacheSettings>
@@ -64,7 +64,7 @@
 		</caching>
 
 		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime targetFramework="4.7.2" executionTimeout="3600" />
+		<httpRuntime targetFramework="4.7.2" executionTimeout="3600" enableVersionHeader="false"/>
 		<!-- Traditional API: Register a custom SessionIDManager for BotDetect requests -->
 		<sessionState  timeout="20" mode="InProc" cookieless="AutoDetect" sessionIDManagerType="BotDetect.Web.CustomSessionIdManager, BotDetect" >
 		</sessionState>
@@ -103,6 +103,9 @@
 		</rewrite>
 		<httpProtocol>
 			<customHeaders>
+        <remove name="X-Powered-By" />
+        <add name="X-Content-Type-Options" value="nosniff" />
+        <add name="Cache-Control" value="no-cache, no-store, must-revalidate" />
 				<add name="X-Frame-Options" value="SAMEORIGIN" />
 			</customHeaders>
 		</httpProtocol>
