--- a/OnlineShop_8_11_2020/OnlineShop/bin/OnlineShop.dll.config
+++ b/OnlineShop_8_11_2020/OnlineShop/bin/OnlineShop.dll.config
@@ -21,8 +21,8 @@
 		<section name="paypal" type="PayPal.SDKConfigHandler, PayPal" />
 	</configSections>
 	<connectionStrings>
-    <add name="OnlineShopDbContext" connectionString="data source='DESKTOP-12J6D6C';initial catalog=OnlineShop;MultipleActiveResultSets=True;App=EntityFramework; Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+		<add name="OnlineShopDbContext" connectionString="data source='DESKTOP-3LI7BJM\MSSQLSERVER01';initial catalog=OnlineShop;MultipleActiveResultSets=True;App=EntityFramework; Integrated Security=True" providerName="System.Data.SqlClient"  />
+	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
